[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spirv"
author = "Almar Klein"
author-email = "almar.klein@gmail.com"
home-page = "https://github.com/almarklein/spirv"
description-file="README.md"
requires-python = ">=3.6"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

